--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "b99dc109-764b-48a8-b9b0-028e6e58fc66"
 authors = ["Éric Thiébaut <eric.thiebaut@univ-lyon1.fr> and contributors"]
 version = "0.1.0"
 
+[deps]
+Unitless = "c904d999-9673-4878-a3dd-e3ef1851788a"
+
 [compat]
 julia = "1"
 
