Change package name (and uuid): Amors -> AMORS

--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,5 @@
-name = "Amors"
-uuid = "b99dc109-764b-48a8-b9b0-028e6e58fc66"
+name = "AMORS"
+uuid = "77d29c75-3847-48dd-b74a-66585bbee1d5"
 authors = ["Éric Thiébaut <eric.thiebaut@univ-lyon1.fr> and contributors"]
 version = "0.1.0"
 
