--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,10 @@ authors = ["Éric Thiébaut <eric.thiebaut@univ-lyon1.fr> and contributors"]
 version = "0.1.0"
 
 [deps]
-Unitless = "c904d999-9673-4878-a3dd-e3ef1851788a"
+TypeUtils = "c3b1956e-8857-4d84-9b79-890df85b1e67"
 
 [compat]
-Unitless = "2"
+TypeUtils = "1"
 julia = "1"
 
 [extras]
