--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,6 +15,7 @@ jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
     runs-on: ${{ matrix.os }}
+    continue-on-error: ${{ matrix.version == 'nightly' }}
     timeout-minutes: 60
     permissions: # needed to allow julia-actions/cache to proactively delete old caches that it has created
       actions: write
@@ -22,10 +23,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version:
-          - '1'
-          - '1.0'
-          - 'nightly'
+        version: ['1.0', '1.6', '1.10', '1', 'nightly']
         os:
           - ubuntu-latest
 #         - macOS-latest
