--- a/Project.toml
+++ b/Project.toml
@@ -9,11 +9,13 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 TypeUtils = "c3b1956e-8857-4d84-9b79-890df85b1e67"
 
 [compat]
+Random = "1"
 TypeUtils = "1"
 julia = "1"
 
 [extras]
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "Random"]
